--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,6 @@
 {
-    "version": 2,
-    "builds": [{
-      "src": "./app.js",
-      "use": "@vercel/node"
-    }],
-    "routes": [{"handle": "filesystem"},
-      {
-        "src": "/.*",
-        "dest": "/"
-      }
-    ]
-  }
+  "version": 2,
+  "name": "native-server",
+  "builds": [{ "src": "app.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/app.js" }]
+}
